create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -97,7 +97,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Сходи на мероприятие</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Любое интересное тебе. С ростом известности нашего Спутника, повсюду будет больше застенчивых, готовых к знакомствам.<br><br><strong>Куда сходить</strong></p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Любое интересное тебе. С ростом известности Спутника всюду будет больше застенчивых, готовых к знакомствам.<br><br><strong>Куда сходить</strong></p>
                     </div>
                 </div>
             </div>
