create github pages

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 155%;">
-                <img src="assets/images/4-602x527.png" alt="Mobirise" title="">
+                <img src="assets/images/5-602x532.png" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
