--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -68,7 +68,7 @@
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Получи Спутник</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
-                            Спутник — это небольшой опознавательный значок для офлайна, по которому поймут, что ты в теме и где ты онлайн.&nbsp;<br><br><strong>Где получить</strong></p>
+                            Спутник — это небольшой значок для офлайна, по которому можно понять, кто из присутствующих на мероприятии в теме.&nbsp;<br><br><strong>Где получить</strong></p>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Пометь аватарку ВКонтакте</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
-                            По этой метке тебя сможет найти застенчивый в группе мероприятия (вступи в неё). Также и ты сможешь найти понравившегося человека.&nbsp;<br><br><strong>Как пометить</strong></p>
+                            По этой метке тебя можно найти в группе мероприятия (вступи в неё). Также и ты сможешь найти понравившегося человека.&nbsp;<br><br><strong>Как пометить</strong></p>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Сходи на мероприятие</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Любое интересное тебе. С ростом известности Спутника всюду будет больше застенчивых, готовых к знакомствам.<br><br><strong>Куда сходить</strong></p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Любое интересное тебе. С ростом известности Спутника среди посетителей будет больше застенчивых, готовых к знакомствам.<br><br><strong>Куда сходить</strong></p>
                     </div>
                 </div>
             </div>
