create github pages

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 155%;">
-                <img src="assets/images/5-602x532.png" alt="Mobirise" title="">
+                <img src="assets/images/6-758x759.png" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-5">
-                    Привет!</h1>
+                    Привет, земляне.</h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-5">Спутник — это необычный формат знакомств (да, такого ещё не было) <em>для застенчивых и скромных</em>.&nbsp;<br>Тех, кто  испытывает неловкость, кому не хватает уверенности, кто не решается подойти.&nbsp;&nbsp;Кто до смерти боится отказа, но не планирует умирать в одиночестве.<br><em>Спутник не Тиндер, не мамбасайт</em>. Здесь нет ∞ свайпов, анкет, переписок, неадекватных персон. Здесь вам даётся возможность <em>"незаметно" увидеть друг друга онлайн</em> и уже затем начать общаться ВКонтакте, а потом как угодно.<br><br>Спутник бескорыстно запускает знакомства в реальном мире и не ждёт, что вы сюда вернётесь —&nbsp;это не требуется.<br></p>
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -57,7 +57,7 @@
     <div class="container">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style align-center display-2">
             Спутниковая встреча</h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Увидеть&nbsp;вживую на мероприятии, зная, что человек тоже в поиске, а затем преодолеть барьер застенчивости с помощью соцсети. Известно — виртуально контактировать проще. <br>Если повезёт и интерес будет взаимный, то пара сложится. Значит, Спутник справился.</h3>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Увидеть&nbsp;вживую на мероприятии, зная, что она/он тоже в поиске, а затем преодолеть барьер застенчивости с помощью соцсети. Известно — виртуально контактировать проще. <br>Если повезёт и интерес будет взаимный, то пара сложится. Значит, Спутник справился.</h3>
         <div class="step-container row justify-content-center">
             <div class="card col-12 col-md-4 separline">
                 <div class="step-element">
