create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -69,7 +69,7 @@
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Получи значок</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
-                            Небольшой опознавательный значок для офлайна, по которому можно понять, кто из присутствующих на мероприятии в теме.&nbsp;<br><br><strong>Где получить</strong></p>
+                            Небольшая опознавательная метка для офлайна, по которой можно понять, кто из присутствующих на мероприятии в теме.&nbsp;<br><br><strong>Где получить</strong></p>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Пометь аватарку ВКонтакте</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
-                            По этой метке тебя можно найти в группе мероприятия (вступи в неё). Там ты также сможешь найти человека, который тебе понравился.&nbsp;<br><br><strong>Как пометить</strong></p>
+                            По этой метке тебя можно найти в группе мероприятия (вступи в неё). И ты там тоже сможешь найти человека, который тебе понравился.&nbsp;<br><br><strong>Как пометить</strong></p>
                     </div>
                 </div>
             </div>
