create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -215,7 +215,11 @@
  
  <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
      
-    <div class="mbr-section__container block" style="width: 100%;">Ваш HTML. Пожалуйста, используйте значок шестеренки для редактирования HTML.</div>
+    <div class="mbr-section__container block" style="width: 100%;"><div id="blanket" style="display:none;"></div>
+<div id="popUpDiv" style="display:none;">
+<a href="#" onclick="popup('popUpDiv')">Закрыть PopUp</a>
+</div>
+<a href="#" onclick="popup('popUpDiv')">Открыть PopUp</a></div>
  </div>
 
 </section>
