--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -217,9 +217,9 @@
      
     <div class="mbr-section__container block" style="width: 100%;"><div id="blanket" style="display:none;"></div>
 <div id="popUpDiv" style="display:none;">
-<a href="#" onclick="popup('popUpDiv')">Закрыть PopUp</a>
+<a href="http://netinder.ru/page1.html" onclick="popup('popUpDiv')">Закрыть PopUp</a>
 </div>
-<a href="#" onclick="popup('popUpDiv')">Открыть PopUp</a></div>
+<a href="http://netinder.ru/page1.html" onclick="popup('popUpDiv')">Открыть PopUp</a></div>
  </div>
 
 </section>
