--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -213,7 +213,7 @@
 
 <section class="mbr-section" id="witsec-custom-html-block-j" data-rv-view="16" style="background-color: rgb(255, 255, 255);">
  
- <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
+ <div class="witsec-custom-html-container elements-content" style="padding-top: 0rem; padding-bottom: 0rem;">
      
     <div class="mbr-section__container block" style="width: 100%;"><div id="blanket" style="display:none;"></div>
 <div id="popUpDiv" style="display:none;">
