create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -57,7 +57,7 @@
     <div class="container">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style align-center display-2">
             Спутниковая встреча. В чём суть?</h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Увидеть на мероприятии и не превозмогая себя, не теряя понравившегося человека, попробовать преодолеть барьер застенчивости с помощью соцсети</h3>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Увидеть на мероприятии и не превозмогая себя, не потеряв понравившегося человека, попробовать преодолеть барьер застенчивости с помощью соцсети</h3>
         <div class="step-container row justify-content-center">
             <div class="card col-12 col-md-4 separline">
                 <div class="step-element">
