create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -67,7 +67,7 @@
                         </h3>
                     </div>          
                     <div class="step-text-content align-center">
-                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Получи значок</h4>
+                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Получить значок</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
                             Небольшую метку для офлайна, по которой можно понять, кто на мероприятии знает про Спутник. <br><br><strong>Где получить</strong></p>
                     </div>
@@ -82,9 +82,9 @@
                         </h3>
                     </div>          
                     <div class="step-text-content align-center">
-                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Пометь аватарку ВКонтакте</h4>
+                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Пометить аватарку ВКонтакте</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
-                            По отмеченным аватаркам люди со Спутника найдутся в группе мероприятия (надо вступить).<br><br><strong>Как пометить</strong></p>
+                            По отмеченным аватаркам люди со Спутника найдутся в группе мероприятия (туда надо вступить).<br><br><strong>Как пометить</strong></p>
                     </div>
                 </div>
             </div>
@@ -97,8 +97,8 @@
                         </h3>
                     </div>          
                     <div class="step-text-content align-center">
-                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Сходи на мероприятие</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Чем больше Спутник будет известен, тем больше на мероприятиях будет людей со значками.<br><br><strong>Куда сходить</strong></p>
+                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Сходить на мероприятие</h4>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Любое. Чем больше Спутник известен, тем больше там будет людей со значками.<br><br><strong>Куда сходить</strong></p>
                     </div>
                 </div>
             </div>
