--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -55,7 +55,7 @@
     
     <div class="container">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style align-center display-2">В чём суть?</h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Увидеть на мероприятии и не превозмогая себя, не потеряв человека в большом городе, попробовать преодолеть барьер застенчивости с помощью соцсети</h3>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Увидеть на мероприятии и не потеряв человека в большом городе, попробовать преодолеть барьер застенчивости с помощью соцсети</h3>
         <div class="step-container row justify-content-center">
             <div class="card col-12 col-md-4 separline">
                 <div class="step-element">
