--- a/gde-sputnik.html
+++ b/gde-sputnik.html
@@ -42,8 +42,19 @@
     </div>
 </section>
 
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-section article content1 cid-rTi8G5tfEz" id="content1-y">
+    
+     
 
-  <section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+    <div class="container">
+        <div class="media-container-row">
+            <div class="mbr-text col-12 mbr-fonts-style display-4 col-md-12"><p><a href="https://www.instagram.com/p/BmVEFoEBUZi/" target="_blank" class="text-warning">© Pascal Campion</a></p></div>
+        </div>
+    </div>
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
