--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -68,7 +68,7 @@
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Получи значок</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
-                            Небольшую метку для офлайна, по которой можно понять, кто на мероприятии знает про Спутник. <br><br><strong><a href="href="#donateModal" data-toggle="modal" class="text-warning">Где получить</a></strong></p>
+                            Небольшую метку для офлайна, по которой можно понять, кто на мероприятии знает про Спутник.<br><br><strong><a href="href="#donateModal" data-toggle="modal" class="text-warning">Где получить</a></strong></p>
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-custom-html-block-u" data-rv-view="25" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section" id="witsec-custom-html-block-u" data-rv-view="16" style="background-color: rgb(255, 255, 255);">
  
  <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
      
