--- a/kuda.html
+++ b/kuda.html
@@ -49,8 +49,19 @@
     </div>
 </section>
 
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section article content1 cid-rTi8TKdn8p" id="content1-10">
+    
+     
 
-  <section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+    <div class="container">
+        <div class="media-container-row">
+            <div class="mbr-text col-12 mbr-fonts-style display-4 col-md-12"><p><a href="https://www.instagram.com/p/BmVEFoEBUZi/" target="_blank" class="text-warning">© Pascal Campion</a></p></div>
+        </div>
+    </div>
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
