create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -68,7 +68,7 @@
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Получи значок</h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">
-                            Небольшую метку для офлайна, по которой можно понять, кто на мероприятии знает про Спутник.<br><br><strong><a href="href="#donateModal" data-toggle="modal" class="text-warning">Где получить</a></strong></p>
+                            Небольшую метку для офлайна, по которой можно понять, кто на мероприятии знает про Спутник.<br><br>Где получить<br></p>
                     </div>
                 </div>
             </div>
