--- a/kuda.html
+++ b/kuda.html
@@ -39,7 +39,6 @@
 <br><a href="https://timepad.ru/afisha/ekaterinburg/events/" target="_blank" class="text-warning">События Timepad</a>
 <br><a href="https://gorodzovet.ru/ekb/" target="_blank" class="text-warning">Афиша Город Зовёт
 </a><br><a href="https://weburg.net/afisha/ekb" target="_blank" class="text-warning">Афиша Weburg</a>
-<br>Культура.Екатеринбург.рф
 <br><a href="https://www.e1.ru/afisha/" target="_blank" class="text-warning">Афиша E1.ru
 </a><br><br><a href="index.html#content4-8" class="text-primary">Назад</a></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">...</p>
@@ -49,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section article content1 cid-rTi8TKdn8p" id="content1-10">
+<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="mbr-section article content1 cid-rTi8TKdn8p" id="content1-10">
     
      
 
