--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -56,7 +56,7 @@
     
     <div class="container">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style align-center display-2">В чём суть?</h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Понравиться <strong>⇆</strong> не потеряться</h3>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Понравиться вживую&nbsp;<strong>⇆</strong> не потеряться в большом городе</h3>
         <div class="step-container row justify-content-center">
             <div class="card col-12 col-md-4 separline">
                 <div class="step-element">
