--- a/otmetka.html
+++ b/otmetka.html
@@ -34,7 +34,7 @@
               <img src="assets/images/65028393-180191556324182-5890169947291928751-n-1080x1350.jpg" alt="" title="">
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7">Значок Спутника можно получить в кофейне <a href="https://2gis.ru/ekaterinburg/firm/70000001039003737" target="_blank" class="text-warning">Безопасный кекс по адресу г. Екатеринбург, ул. Малышева, 27</a>&nbsp;<br>Спросите у баристы.<br><br><a href="index.html#content4-8" class="text-primary">Назад</a></p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7">1. Вступите в группу мероприятия или сообщество организатора ВКонтакте или другой соц.сети.<br><br>2. Чтобы легче было найти вас после мероприятия и списаться с вами - выделите свою аватарку среди прочих следующим образом:<br><br><a href="index.html#content4-8" class="text-primary">Назад</a></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">...</p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">...</p>
             </div>
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section article content1 cid-rTi8PFv84R" id="content1-z">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section article content1 cid-rTi8PFv84R" id="content1-z">
     
      
 
