--- a/gde-sputnik.html
+++ b/gde-sputnik.html
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content1 cid-rTi8G5tfEz" id="content1-y">
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section article content1 cid-rTi8G5tfEz" id="content1-y">
     
      
 
