create github pages

--- a/kuda.html
+++ b/kuda.html
@@ -40,7 +40,7 @@
 <br><a href="https://gorodzovet.ru/ekb/" target="_blank" class="text-warning">Афиша Город Зовёт
 </a><br><a href="https://weburg.net/afisha/ekb" target="_blank" class="text-warning">Афиша Weburg</a>
 <br><a href="https://www.e1.ru/afisha/" target="_blank" class="text-warning">Афиша E1.ru
-</a><br><br><a href="index.html#content4-8" class="text-primary">Назад</a></p>
+</a><br><br><a href="index.html#step2-5" class="text-primary">Назад</a></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">...</p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">...</p>
             </div>
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section article content1 cid-rTi8TKdn8p" id="content1-10">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content1 cid-rTi8TKdn8p" id="content1-10">
     
      
 
