--- a/gde-sputnik.html
+++ b/gde-sputnik.html
@@ -34,7 +34,7 @@
               <img src="assets/images/51381484-606210029804684-1563764623409778415-n-1080x1350.jpg" alt="" title="">
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7">Значок Спутника можно получить в кофейне <a href="https://2gis.ru/ekaterinburg/firm/70000001039003737" target="_blank" class="text-warning">Безопасный кекс по адресу г. Екатеринбург, ул. Малышева, 27</a>&nbsp;<br>Спросите у баристы.<br><br><a href="index.html#content4-8" class="text-primary">Назад</a></p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7">Значок Спутника можно получить в кофейне <a href="https://2gis.ru/ekaterinburg/firm/70000001039003737" target="_blank" class="text-warning">Безопасный кекс по адресу г. Екатеринбург, ул. Малышева, 27</a>&nbsp;<br>Спросите у баристы.<br><br><a href="index.html#step2-5" class="text-primary">Назад</a></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">...</p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">...</p>
             </div>
@@ -42,7 +42,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="mbr-section article content1 cid-rTi8G5tfEz" id="content1-y">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section article content1 cid-rTi8G5tfEz" id="content1-y">
     
      
 
