--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -220,7 +220,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-custom-html-block-u" data-rv-view="16" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section" id="witsec-custom-html-block-u" data-rv-view="47" style="background-color: rgb(255, 255, 255);">
  
  <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
      
