create github pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -97,7 +97,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Сходи на мероприятие</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Любое. Чем больше Спутник известен, тем везде будет больше людей со значками.<br><br><strong><a href="kuda.html" class="text-warning">Куда сходить</a></strong></p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Любое. Чем больше Спутник известен, тем всюду будет больше людей со значками.<br><br><strong><a href="kuda.html" class="text-warning">Куда сходить</a></strong></p>
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-custom-html-block-u" data-rv-view="32" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section" id="witsec-custom-html-block-u" data-rv-view="16" style="background-color: rgb(255, 255, 255);">
  
  <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
      
