--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="step2 cid-rQGAVIXTHh" id="step2-5">
 
     
 
@@ -169,7 +169,7 @@
 <br>
 <br>Те, кто летал - упали, 
 <br>Потому что детали, не механизм.&nbsp;<br>Может это неверный пазл, 
-<br>Или быть может в этот раз
+<br>Или может быть в этот раз
 <br>Может быть...<br></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-4"><span style="font-weight: normal;">© Сердце - Детали</span></p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">...</p>
@@ -220,7 +220,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-custom-html-block-u" data-rv-view="16" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section" id="witsec-custom-html-block-u" data-rv-view="21" style="background-color: rgb(255, 255, 255);">
  
  <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
      
